--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,3 @@
-[build]
-  # Force Python builder
-  builder = "Python"
-
-[deploy]
-  # Commands Railway should run
-  startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
-
-[variables]
-  PYTHON_VERSION = "3.11"
+[service]
+root = "backend"
+start = "uvicorn main:app --host 0.0.0.0 --port $PORT"
